--- a/styles/style.css
+++ b/styles/style.css
@@ -78,7 +78,54 @@ nav > ul li a {
   width: 95%;
   max-width: 1200px;
 }
+main {
+  /* width: 95%; */
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 50px 100px;
+}
 
+.team-img {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+}
+.team-img img {
+  width: 250px;
+  height: 250px;
+}
+.team-features {
+  display: flex;
+  gap: 50px;
+  align-items: center;
+}
+
+.team-text h1 {
+  font-size: 2.5rem;
+  margin-bottom: 1rem;
+}
+.team-text p {
+  margin-bottom: 1rem;
+}
+
+.hightlight-quick {
+  color: #727272;
+  font-weight: 500;
+}
+
+.heightlight-our {
+  color: #131313;
+  font-weight: 700;
+}
+.hightlight-feature {
+  color: #ff900e;
+  font-weight: 700;
+}
+
+/* ------------------------- */
+/* ----------------------------- */
+
+/* ----------------------------------- */
 @media screen and (max-width: 576px) {
   header {
     padding: 20px;
@@ -86,11 +133,28 @@ nav > ul li a {
   nav {
     flex-direction: column;
     gap: 20px;
+    align-items: center;
     justify-content: center;
   }
   .banner-text h1 {
     font-size: 2.5rem;
   }
+  .team-features {
+    flex-direction: column-reverse;
+  }
+  main {
+    padding: 20px;
+  }
+  .team-text h1 {
+    font-size: 2rem;
+  }
+  .team-img img {
+    width: 100%;
+    height: auto;
+  }
+  /* .team-img { */
+  /* grid-template-columns: 1fr; */
+  /* } */
 }
 
 @media screen and (min-width: 576px) and (max-width: 960px) {
@@ -104,5 +168,8 @@ nav > ul li a {
   }
   nav > ul {
     justify-content: center;
+  }
+  .team-features {
+    flex-direction: column-reverse;
   }
 }
