--- a/styles/style.css
+++ b/styles/style.css
@@ -97,6 +97,7 @@ main {
 .team-features {
   display: flex;
   gap: 50px;
+  margin-bottom: 100px;
   align-items: center;
 }
 
@@ -120,6 +121,74 @@ main {
 .hightlight-feature {
   color: #ff900e;
   font-weight: 700;
+}
+
+/* feature-experience style */
+.feature-experience {
+  display: flex;
+  gap: 80px;
+}
+.feature-experience-content {
+  width: 40%;
+}
+.feature-experience-img {
+  width: 60%;
+}
+.feature-experience-img img {
+  width: 100%;
+}
+.feature-experience-content h1 {
+  color: #131313;
+  font-weight: 700;
+  border-left: 5px solid #ff900e;
+  padding-left: 10px;
+  font-size: 2.5rem;
+  margin-bottom: 20px;
+}
+
+.feature-experience-content p {
+  margin-bottom: 40px;
+}
+.feature-box {
+  margin-bottom: 20px;
+  border-radius: 8px;
+  padding: 20px;
+  background: #fff;
+  box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.08);
+}
+.feature-box h3 {
+  color: #131313;
+  margin-bottom: 10px;
+  font-size: 1.3rem;
+  font-weight: 600;
+}
+.feature-box p {
+  color: #727272;
+  margin-bottom: 0;
+}
+.experience {
+  border-radius: 8px;
+  background: #ff900e;
+  width: 250px;
+  height: 150px;
+  vertical-align: middle;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  bottom: 70px;
+  right: 40px;
+  position: relative;
+}
+.experience h1 {
+  text-align: center;
+  font-size: 3rem;
+  color: #fff;
+}
+.experience p {
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: 500;
+  color: #fff;
 }
 
 /* ------------------------- */
@@ -152,9 +221,19 @@ main {
     width: 100%;
     height: auto;
   }
-  /* .team-img { */
-  /* grid-template-columns: 1fr; */
-  /* } */
+  .feature-experience {
+    flex-direction: column;
+  }
+  .feature-experience-content,
+  .feature-experience-img {
+    width: 100%;
+  }
+  .feature-box {
+    width: 100%;
+  }
+  .experience {
+    left: 0;
+  }
 }
 
 @media screen and (min-width: 576px) and (max-width: 960px) {
@@ -171,5 +250,18 @@ main {
   }
   .team-features {
     flex-direction: column-reverse;
+  }
+  main {
+    padding: 30px;
+  }
+  .feature-experience {
+    flex-direction: column;
+  }
+  .experience {
+    left: 0;
+  }
+  .feature-experience-content,
+  .feature-experience-img {
+    width: 100%;
   }
 }
